*ovirt-host-deploy-1.2.1 (08 May 2014)

  08 May 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.2.1.ebuild:
  Version bump

*ovirt-host-deploy-1.2.0 (27 Mar 2014)

  27 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.2.0.ebuild,
  -ovirt-host-deploy-1.0.1.ebuild, -ovirt-host-deploy-1.1.1.ebuild,
  ovirt-host-deploy-1.1.3.ebuild:
  Version bump

*ovirt-host-deploy-1.1.3 (13 Jan 2014)

  13 Jan 2014; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-host-deploy-1.1.3.ebuild:
  Version bump

  02 Dec 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-host-deploy-1.0.1.ebuild,
  ovirt-host-deploy-1.1.1.ebuild, ovirt-host-deploy-9999.ebuild:
  python fixups

*ovirt-host-deploy-1.1.1 (24 Oct 2013)

  24 Oct 2013; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.1.1.ebuild,
  -ovirt-host-deploy-1.1.0.ebuild:
  version bump

*ovirt-host-deploy-1.1.0 (27 Aug 2013)

  27 Aug 2013; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.1.0.ebuild,
  ovirt-host-deploy-9999.ebuild:
  Version bump

  26 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-host-deploy-9999.ebuild:
  Add local version support

  18 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-host-deploy-1.0.1.ebuild,
  ovirt-host-deploy-9999.ebuild:
  move gettext to DEPEND

*ovirt-host-deploy-1.0.1 (03 Apr 2013)

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.0.1.ebuild:
  Add ovirt-host-deploy-1.0.1

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-host-deploy-9999.ebuild:
  setup layout