@@ -1,3 +1,8 @@
+  24 Nov 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-host-deploy-1.1.3.ebuild,
+  ovirt-host-deploy-1.2.0.ebuild, ovirt-host-deploy-1.2.1.ebuild,
+  ovirt-host-deploy-9999.ebuild:
+  python-3.4
+
 *ovirt-host-deploy-1.2.1 (08 May 2014)
 
   08 May 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.2.1.ebuild:
